--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "service to consume flickr public api",
   "scripts": {
-    "start": "nodemon src/index"
+    "start": "nodemon src/index",
+    "test": "jest"
   },
   "main": "src/index.ts",
   "author": "makbarsyahwana <makbarsyahwana@gmail.com>",
@@ -16,15 +17,20 @@
     "nodemon": "^2.0.19"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.13",
+    "@babel/preset-env": "^7.18.10",
     "@tsconfig/recommended": "^1.0.1",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.14",
     "@typescript-eslint/eslint-plugin": "^5.36.0",
     "@typescript-eslint/parser": "^5.36.0",
+    "babel-jest": "^29.0.1",
     "eslint": "^8.23.0",
     "eslint-plugin-react": "^7.31.1",
     "jest": "^29.0.1",
+    "jest-cli": "^29.0.1",
     "prettier": "^2.7.1",
+    "supertest": "^6.2.4",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
